--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -7,24 +7,20 @@ html, body {
 }
 
 .container {
-  max-width: none;
-  padding: 0;
-  margin: 0;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  margin-left: -50vw;
+  width: 100%;
   height: calc(100vh - 82px);
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 75px;   /* ← adjust this */
   overflow: hidden;
 }
+
 
 .img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 
